--- a/CedarJavaFFI/Cargo.toml
+++ b/CedarJavaFFI/Cargo.toml
@@ -15,7 +15,7 @@ thiserror = "2.0"
 itertools = "0.14"
 
 # JNI Support
-jni = "0.21.0"
+jni = { version = "0.21.1", features = ["invocation"] }
 jni_fn = "0.1.0"
 
 [features]
