changing github workflow for fork
Signed-off-by: Mudit Chaudhary <chmudit@amazon.com>

--- a/.github/workflows/run_cedar_java_reusable.yml
+++ b/.github/workflows/run_cedar_java_reusable.yml
@@ -31,12 +31,12 @@ jobs:
       - name: Checkout Cedar Java
         uses: actions/checkout@v4
         with:
-          repository: cedar-policy/cedar-java
+          repository: muditchaudhary/cedar-java
           ref: ${{ inputs.cedar_java_ref }}
       - name: Checkout cedar-policy
         uses: actions/checkout@v4
         with:
-          repository: cedar-policy/cedar
+          repository: muditchaudhary/cedar
           ref: ${{ inputs.cedar_policy_ref }}
           path: ./cedar
       - name: Prepare Rust Build
